<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.userAuth.sign_up.SignUpFirst">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="30dp"
            android:ems="10"
            android:hint="@string/first_name"
            android:inputType="text"
            android:textAlignment="textStart" />

        <EditText
            android:id="@+id/edLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:ems="10"
            android:hint="@string/last_name"
            android:inputType="text" />

        <Button
            android:id="@+id/btNext"
            android:layout_width="191dp"
            android:layout_height="52dp"
            android:layout_gravity="center"
            android:layout_marginVertical="100dp"
            android:backgroundTint="@color/dark_blue"
            android:text="@string/next"
            app:rippleColor="@color/Periwinkle" />
    </LinearLayout>
</FrameLayout>