<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.userAuth.sign_up.SignUpThird">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:drawableEnd="@drawable/baseline_emergency_24"
            android:drawableStart="@drawable/baseline_phone_24"

            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="30dp"
            android:ems="10"
            android:hint="@string/phone_number"
            android:inputType="phone" />

        <TextView

            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="یا"
            android:textAlignment="center"
            android:textColor="@color/purple"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:drawableEnd="@drawable/baseline_emergency_24"
            android:drawableStart="@drawable/baseline_alternate_email_24"
            android:id="@+id/etEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/btNext"
            android:layout_width="191dp"
            android:layout_height="52dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/dark_blue"
            android:text="@string/next"
            app:rippleColor="@color/Periwinkle" />

        <Button
            android:id="@+id/brPrev"
            android:layout_width="191dp"
            android:layout_height="52dp"
            android:layout_gravity="center"
            android:layout_marginVertical="-100dp"
            android:backgroundTint="@color/dark_blue"
            android:text="@string/previous"
            app:rippleColor="@color/Periwinkle" />

    </LinearLayout>

</FrameLayout>