<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:background="@drawable/border"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="5dp"
                        android:layout_marginVertical="2dp"
                        android:text="@string/first_name"
                        android:textColor="@color/dark_blue"
                        android:textSize="16dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvUsername"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/username"
                        android:textColor="#CE333F63"
                        android:textColorHighlight="#B0FFFFFF" />

                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="5dp"
                    android:layout_marginVertical="5dp"
                    app:cardCornerRadius="60dp">

                    <ImageView
                        android:id="@+id/ivProfile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:srcCompat="@tools:sample/avatars" />

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <TextView
                android:id="@+id/tvTweetText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="10dp"
                android:layout_marginEnd="9dp"
                android:layout_marginBottom="73dp"
                android:text="سلام \n توییت نمونه هستم"
                android:textAlignment="viewEnd"
                android:textSize="20dp" />

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/cvPollFragment"
                android:name="com.mhssonic.flutter.tweet.PollFragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/cvImageFragment"
                android:name="com.mhssonic.flutter.tweet.ImageFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvHashtags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/hashtag"
                tools:layout_editor_absoluteX="72dp"
                tools:layout_editor_absoluteY="325dp" />

            <LinearLayout
                android:id="@+id/bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:layout_marginStart="1dp"
                android:layout_marginTop="1dp"

                android:layout_marginEnd="1dp"
                android:foregroundGravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="100dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_marginEnd="2dp"
                        app:srcCompat="@drawable/baseline_mode_comment_24" />

                    <TextView
                        android:id="@+id/tvComment"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="0"
                        android:textColor="@color/Periwinkle"
                        android:textColorLink="@color/Periwinkle"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="100dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="2dp"
                        app:srcCompat="@drawable/outline_loop_24" />

                    <TextView
                        android:id="@+id/tvRetweet"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="0"
                        android:textColor="@color/Periwinkle"
                        android:textSize="12dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginEnd="2dp"
                        app:srcCompat="@drawable/like_border_24" />

                    <TextView
                        android:id="@+id/tvLike"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="right"
                        android:gravity="center"
                        android:text="0"
                        android:textColor="@color/Periwinkle"
                        android:textSize="12dp" />
                </LinearLayout>


            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>